parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> optional_newlines top_level_list
Rule 2     program -> empty
Rule 3     top_level_list -> top_level optional_newlines top_level_list
Rule 4     top_level_list -> top_level optional_newlines
Rule 5     top_level -> statement_with_newline
Rule 6     top_level -> func_def
Rule 7     top_level -> type_def
Rule 8     statements -> statement_list
Rule 9     statement_list -> statement_with_newline statement_list
Rule 10    statement_list -> statement_with_newline
Rule 11    statement_with_newline -> statement NEWLINE
Rule 12    statement -> declaration
Rule 13    statement -> if_statement
Rule 14    statement -> while_statement
Rule 15    statement -> return_statement
Rule 16    statement -> expression
Rule 17    declaration -> type LBRACKET expression RBRACKET ID
Rule 18    declaration -> type declaration_list
Rule 19    declaration_list -> declaration_item COMMA declaration_list
Rule 20    declaration_list -> declaration_item
Rule 21    declaration_item -> ID
Rule 22    declaration_item -> ID ASSIGN expression
Rule 23    declarations -> declaration NEWLINE declarations
Rule 24    declarations -> declaration NEWLINE
Rule 25    id_list -> ID COMMA id_list
Rule 26    id_list -> ID
Rule 27    declaration -> TYPENAME ID
Rule 28    type -> builtin_type
Rule 29    type -> TYPENAME
Rule 30    builtin_type -> INT
Rule 31    builtin_type -> FLOAT
Rule 32    builtin_type -> CHAR
Rule 33    builtin_type -> BOOL
Rule 34    type_def -> TYPE TYPENAME COLON type_block
Rule 35    type_def -> TYPE ID COLON type_block
Rule 36    type_block -> LBRACE type_declaration_lines RBRACE
Rule 37    type_declaration_line -> declaration NEWLINE
Rule 38    type_declaration_line -> NEWLINE
Rule 39    type_declaration_lines -> type_declaration_line type_declaration_lines
Rule 40    type_declaration_lines -> type_declaration_line
Rule 41    type_declaration_list -> declaration
Rule 42    type_declaration_list -> declaration type_declaration_list
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression MULT expression
Rule 46    expression -> expression DIV expression
Rule 47    expression -> expression EQ expression
Rule 48    expression -> expression NEQ expression
Rule 49    expression -> expression GT expression
Rule 50    expression -> expression GTE expression
Rule 51    expression -> expression LT expression
Rule 52    expression -> expression LTE expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> NOT expression
Rule 56    expression -> MINUS expression
Rule 57    expression -> expression LBRACKET expression RBRACKET
Rule 58    expression -> expression DOT ID
Rule 59    expression -> primary
Rule 60    primary -> ID
Rule 61    primary -> NUMBER
Rule 62    primary -> TRUE
Rule 63    primary -> FALSE
Rule 64    primary -> CHAR_LITERAL
Rule 65    primary -> func_call
Rule 66    primary -> LPAREN expression RPAREN
Rule 67    assignable -> ID
Rule 68    assignable -> expression DOT ID
Rule 69    assignable -> expression LBRACKET expression RBRACKET
Rule 70    statement -> assignable ASSIGN expression
Rule 71    statement -> assignable_chain ASSIGN expression
Rule 72    assignable_chain -> assignable ASSIGN assignable_chain
Rule 73    assignable_chain -> assignable
Rule 74    if_statement -> IF expression block
Rule 75    if_statement -> IF expression block ELSE block
Rule 76    while_statement -> WHILE expression block
Rule 77    func_def -> DEF type ID LPAREN param_list RPAREN store_params prepare_func_scope COLON LBRACE NEWLINE statement_list RBRACE
Rule 78    param_list -> param param_list_tail
Rule 79    param_list -> empty
Rule 80    param_list_tail -> COMMA param param_list_tail
Rule 81    param_list_tail -> empty
Rule 82    store_params -> <empty>
Rule 83    param -> type ID
Rule 84    param -> ID
Rule 85    return_statement -> RETURN expression
Rule 86    func_call -> ID LPAREN arg_list RPAREN
Rule 87    arg_list -> arg_list COMMA expression
Rule 88    arg_list -> expression
Rule 89    arg_list -> empty
Rule 90    empty -> <empty>
Rule 91    block -> COLON optional_newlines statement_list
Rule 92    block -> COLON LBRACE NEWLINE statement_list RBRACE NEWLINE
Rule 93    prepare_func_scope -> <empty>
Rule 94    optional_newlines -> optional_newlines NEWLINE
Rule 95    optional_newlines -> empty

Terminals, with rules where they appear

AND                  : 53
ASSIGN               : 22 70 71 72
BOOL                 : 33
CHAR                 : 32
CHAR_LITERAL         : 64
COLON                : 34 35 77 91 92
COMMA                : 19 25 80 87
DEF                  : 77
DIV                  : 46
DOT                  : 58 68
ELSE                 : 75
EQ                   : 47
FALSE                : 63
FLOAT                : 31
GT                   : 49
GTE                  : 50
ID                   : 17 21 22 25 26 27 35 58 60 67 68 77 83 84 86
IF                   : 74 75
INT                  : 30
LBRACE               : 36 77 92
LBRACKET             : 17 57 69
LPAREN               : 66 77 86
LT                   : 51
LTE                  : 52
MINUS                : 44 56
MULT                 : 45
NEQ                  : 48
NEWLINE              : 11 23 24 37 38 77 92 92 94
NOT                  : 55
NUMBER               : 61
OR                   : 54
PLUS                 : 43
RBRACE               : 36 77 92
RBRACKET             : 17 57 69
RETURN               : 85
RPAREN               : 66 77 86
TRUE                 : 62
TYPE                 : 34 35
TYPENAME             : 27 29 34
WHILE                : 76
error                : 

Nonterminals, with rules where they appear

arg_list             : 86 87
assignable           : 70 72 73
assignable_chain     : 71 72
block                : 74 75 75 76
builtin_type         : 28
declaration          : 12 23 24 37 41 42
declaration_item     : 19 20
declaration_list     : 18 19
declarations         : 23
empty                : 2 79 81 89 95
expression           : 16 17 22 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57 57 58 66 68 69 69 70 71 74 75 76 85 87 88
func_call            : 65
func_def             : 6
id_list              : 25
if_statement         : 13
optional_newlines    : 1 3 4 91 94
param                : 78 80
param_list           : 77
param_list_tail      : 78 80
prepare_func_scope   : 77
primary              : 59
program              : 0
return_statement     : 15
statement            : 11
statement_list       : 8 9 77 91 92
statement_with_newline : 5 9 10
statements           : 
store_params         : 77
top_level            : 3 4
top_level_list       : 1 3
type                 : 17 18 77 83
type_block           : 34 35
type_declaration_line : 39 40
type_declaration_lines : 36 39
type_declaration_list : 42
type_def             : 7
while_statement      : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . optional_newlines top_level_list
    (2) program -> . empty
    (94) optional_newlines -> . optional_newlines NEWLINE
    (95) optional_newlines -> . empty
    (90) empty -> .

    $end            reduce using rule 90 (empty -> .)
    NEWLINE         reduce using rule 90 (empty -> .)
    DEF             reduce using rule 90 (empty -> .)
    TYPE            reduce using rule 90 (empty -> .)
    TYPENAME        reduce using rule 90 (empty -> .)
    IF              reduce using rule 90 (empty -> .)
    WHILE           reduce using rule 90 (empty -> .)
    RETURN          reduce using rule 90 (empty -> .)
    NOT             reduce using rule 90 (empty -> .)
    MINUS           reduce using rule 90 (empty -> .)
    ID              reduce using rule 90 (empty -> .)
    NUMBER          reduce using rule 90 (empty -> .)
    TRUE            reduce using rule 90 (empty -> .)
    FALSE           reduce using rule 90 (empty -> .)
    CHAR_LITERAL    reduce using rule 90 (empty -> .)
    LPAREN          reduce using rule 90 (empty -> .)
    INT             reduce using rule 90 (empty -> .)
    FLOAT           reduce using rule 90 (empty -> .)
    CHAR            reduce using rule 90 (empty -> .)
    BOOL            reduce using rule 90 (empty -> .)

    program                        shift and go to state 1
    optional_newlines              shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> optional_newlines . top_level_list
    (94) optional_newlines -> optional_newlines . NEWLINE
    (3) top_level_list -> . top_level optional_newlines top_level_list
    (4) top_level_list -> . top_level optional_newlines
    (5) top_level -> . statement_with_newline
    (6) top_level -> . func_def
    (7) top_level -> . type_def
    (11) statement_with_newline -> . statement NEWLINE
    (77) func_def -> . DEF type ID LPAREN param_list RPAREN store_params prepare_func_scope COLON LBRACE NEWLINE statement_list RBRACE
    (34) type_def -> . TYPE TYPENAME COLON type_block
    (35) type_def -> . TYPE ID COLON type_block
    (12) statement -> . declaration
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . return_statement
    (16) statement -> . expression
    (70) statement -> . assignable ASSIGN expression
    (71) statement -> . assignable_chain ASSIGN expression
    (17) declaration -> . type LBRACKET expression RBRACKET ID
    (18) declaration -> . type declaration_list
    (27) declaration -> . TYPENAME ID
    (74) if_statement -> . IF expression block
    (75) if_statement -> . IF expression block ELSE block
    (76) while_statement -> . WHILE expression block
    (85) return_statement -> . RETURN expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LT expression
    (52) expression -> . expression LTE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . expression LBRACKET expression RBRACKET
    (58) expression -> . expression DOT ID
    (59) expression -> . primary
    (67) assignable -> . ID
    (68) assignable -> . expression DOT ID
    (69) assignable -> . expression LBRACKET expression RBRACKET
    (72) assignable_chain -> . assignable ASSIGN assignable_chain
    (73) assignable_chain -> . assignable
    (28) type -> . builtin_type
    (29) type -> . TYPENAME
    (60) primary -> . ID
    (61) primary -> . NUMBER
    (62) primary -> . TRUE
    (63) primary -> . FALSE
    (64) primary -> . CHAR_LITERAL
    (65) primary -> . func_call
    (66) primary -> . LPAREN expression RPAREN
    (30) builtin_type -> . INT
    (31) builtin_type -> . FLOAT
    (32) builtin_type -> . CHAR
    (33) builtin_type -> . BOOL
    (86) func_call -> . ID LPAREN arg_list RPAREN

    NEWLINE         shift and go to state 5
    DEF             shift and go to state 11
    TYPE            shift and go to state 15
    TYPENAME        shift and go to state 16
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    RETURN          shift and go to state 26
    NOT             shift and go to state 28
    MINUS           shift and go to state 27
    ID              shift and go to state 13
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    LPAREN          shift and go to state 14
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38
    BOOL            shift and go to state 39

    top_level_list                 shift and go to state 4
    top_level                      shift and go to state 6
    statement_with_newline         shift and go to state 7
    func_def                       shift and go to state 8
    type_def                       shift and go to state 9
    statement                      shift and go to state 10
    type                           shift and go to state 12
    declaration                    shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    return_statement               shift and go to state 20
    expression                     shift and go to state 21
    assignable                     shift and go to state 22
    assignable_chain               shift and go to state 23
    primary                        shift and go to state 29
    builtin_type                   shift and go to state 30
    func_call                      shift and go to state 35

state 3

    (2) program -> empty .
    (95) optional_newlines -> empty .

    $end            reduce using rule 2 (program -> empty .)
    NEWLINE         reduce using rule 95 (optional_newlines -> empty .)
    DEF             reduce using rule 95 (optional_newlines -> empty .)
    TYPE            reduce using rule 95 (optional_newlines -> empty .)
    TYPENAME        reduce using rule 95 (optional_newlines -> empty .)
    IF              reduce using rule 95 (optional_newlines -> empty .)
    WHILE           reduce using rule 95 (optional_newlines -> empty .)
    RETURN          reduce using rule 95 (optional_newlines -> empty .)
    NOT             reduce using rule 95 (optional_newlines -> empty .)
    MINUS           reduce using rule 95 (optional_newlines -> empty .)
    ID              reduce using rule 95 (optional_newlines -> empty .)
    NUMBER          reduce using rule 95 (optional_newlines -> empty .)
    TRUE            reduce using rule 95 (optional_newlines -> empty .)
    FALSE           reduce using rule 95 (optional_newlines -> empty .)
    CHAR_LITERAL    reduce using rule 95 (optional_newlines -> empty .)
    LPAREN          reduce using rule 95 (optional_newlines -> empty .)
    INT             reduce using rule 95 (optional_newlines -> empty .)
    FLOAT           reduce using rule 95 (optional_newlines -> empty .)
    CHAR            reduce using rule 95 (optional_newlines -> empty .)
    BOOL            reduce using rule 95 (optional_newlines -> empty .)


state 4

    (1) program -> optional_newlines top_level_list .

    $end            reduce using rule 1 (program -> optional_newlines top_level_list .)


state 5

    (94) optional_newlines -> optional_newlines NEWLINE .

    NEWLINE         reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    DEF             reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    TYPE            reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    TYPENAME        reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    IF              reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    WHILE           reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    RETURN          reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    NOT             reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    MINUS           reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    ID              reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    NUMBER          reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    TRUE            reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    FALSE           reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    CHAR_LITERAL    reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    LPAREN          reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    INT             reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    FLOAT           reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    CHAR            reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    BOOL            reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)
    $end            reduce using rule 94 (optional_newlines -> optional_newlines NEWLINE .)


state 6

    (3) top_level_list -> top_level . optional_newlines top_level_list
    (4) top_level_list -> top_level . optional_newlines
    (94) optional_newlines -> . optional_newlines NEWLINE
    (95) optional_newlines -> . empty
    (90) empty -> .

    NEWLINE         reduce using rule 90 (empty -> .)
    DEF             reduce using rule 90 (empty -> .)
    TYPE            reduce using rule 90 (empty -> .)
    TYPENAME        reduce using rule 90 (empty -> .)
    IF              reduce using rule 90 (empty -> .)
    WHILE           reduce using rule 90 (empty -> .)
    RETURN          reduce using rule 90 (empty -> .)
    NOT             reduce using rule 90 (empty -> .)
    MINUS           reduce using rule 90 (empty -> .)
    ID              reduce using rule 90 (empty -> .)
    NUMBER          reduce using rule 90 (empty -> .)
    TRUE            reduce using rule 90 (empty -> .)
    FALSE           reduce using rule 90 (empty -> .)
    CHAR_LITERAL    reduce using rule 90 (empty -> .)
    LPAREN          reduce using rule 90 (empty -> .)
    INT             reduce using rule 90 (empty -> .)
    FLOAT           reduce using rule 90 (empty -> .)
    CHAR            reduce using rule 90 (empty -> .)
    BOOL            reduce using rule 90 (empty -> .)
    $end            reduce using rule 90 (empty -> .)

    optional_newlines              shift and go to state 40
    empty                          shift and go to state 41

state 7

    (5) top_level -> statement_with_newline .

    NEWLINE         reduce using rule 5 (top_level -> statement_with_newline .)
    DEF             reduce using rule 5 (top_level -> statement_with_newline .)
    TYPE            reduce using rule 5 (top_level -> statement_with_newline .)
    TYPENAME        reduce using rule 5 (top_level -> statement_with_newline .)
    IF              reduce using rule 5 (top_level -> statement_with_newline .)
    WHILE           reduce using rule 5 (top_level -> statement_with_newline .)
    RETURN          reduce using rule 5 (top_level -> statement_with_newline .)
    NOT             reduce using rule 5 (top_level -> statement_with_newline .)
    MINUS           reduce using rule 5 (top_level -> statement_with_newline .)
    ID              reduce using rule 5 (top_level -> statement_with_newline .)
    NUMBER          reduce using rule 5 (top_level -> statement_with_newline .)
    TRUE            reduce using rule 5 (top_level -> statement_with_newline .)
    FALSE           reduce using rule 5 (top_level -> statement_with_newline .)
    CHAR_LITERAL    reduce using rule 5 (top_level -> statement_with_newline .)
    LPAREN          reduce using rule 5 (top_level -> statement_with_newline .)
    INT             reduce using rule 5 (top_level -> statement_with_newline .)
    FLOAT           reduce using rule 5 (top_level -> statement_with_newline .)
    CHAR            reduce using rule 5 (top_level -> statement_with_newline .)
    BOOL            reduce using rule 5 (top_level -> statement_with_newline .)
    $end            reduce using rule 5 (top_level -> statement_with_newline .)


state 8

    (6) top_level -> func_def .

    NEWLINE         reduce using rule 6 (top_level -> func_def .)
    DEF             reduce using rule 6 (top_level -> func_def .)
    TYPE            reduce using rule 6 (top_level -> func_def .)
    TYPENAME        reduce using rule 6 (top_level -> func_def .)
    IF              reduce using rule 6 (top_level -> func_def .)
    WHILE           reduce using rule 6 (top_level -> func_def .)
    RETURN          reduce using rule 6 (top_level -> func_def .)
    NOT             reduce using rule 6 (top_level -> func_def .)
    MINUS           reduce using rule 6 (top_level -> func_def .)
    ID              reduce using rule 6 (top_level -> func_def .)
    NUMBER          reduce using rule 6 (top_level -> func_def .)
    TRUE            reduce using rule 6 (top_level -> func_def .)
    FALSE           reduce using rule 6 (top_level -> func_def .)
    CHAR_LITERAL    reduce using rule 6 (top_level -> func_def .)
    LPAREN          reduce using rule 6 (top_level -> func_def .)
    INT             reduce using rule 6 (top_level -> func_def .)
    FLOAT           reduce using rule 6 (top_level -> func_def .)
    CHAR            reduce using rule 6 (top_level -> func_def .)
    BOOL            reduce using rule 6 (top_level -> func_def .)
    $end            reduce using rule 6 (top_level -> func_def .)


state 9

    (7) top_level -> type_def .

    NEWLINE         reduce using rule 7 (top_level -> type_def .)
    DEF             reduce using rule 7 (top_level -> type_def .)
    TYPE            reduce using rule 7 (top_level -> type_def .)
    TYPENAME        reduce using rule 7 (top_level -> type_def .)
    IF              reduce using rule 7 (top_level -> type_def .)
    WHILE           reduce using rule 7 (top_level -> type_def .)
    RETURN          reduce using rule 7 (top_level -> type_def .)
    NOT             reduce using rule 7 (top_level -> type_def .)
    MINUS           reduce using rule 7 (top_level -> type_def .)
    ID              reduce using rule 7 (top_level -> type_def .)
    NUMBER          reduce using rule 7 (top_level -> type_def .)
    TRUE            reduce using rule 7 (top_level -> type_def .)
    FALSE           reduce using rule 7 (top_level -> type_def .)
    CHAR_LITERAL    reduce using rule 7 (top_level -> type_def .)
    LPAREN          reduce using rule 7 (top_level -> type_def .)
    INT             reduce using rule 7 (top_level -> type_def .)
    FLOAT           reduce using rule 7 (top_level -> type_def .)
    CHAR            reduce using rule 7 (top_level -> type_def .)
    BOOL            reduce using rule 7 (top_level -> type_def .)
    $end            reduce using rule 7 (top_level -> type_def .)


state 10

    (11) statement_with_newline -> statement . NEWLINE

    NEWLINE         shift and go to state 42


state 11

    (77) func_def -> DEF . type ID LPAREN param_list RPAREN store_params prepare_func_scope COLON LBRACE NEWLINE statement_list RBRACE
    (28) type -> . builtin_type
    (29) type -> . TYPENAME
    (30) builtin_type -> . INT
    (31) builtin_type -> . FLOAT
    (32) builtin_type -> . CHAR
    (33) builtin_type -> . BOOL

    TYPENAME        shift and go to state 44
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38
    BOOL            shift and go to state 39

    type                           shift and go to state 43
    builtin_type                   shift and go to state 30

state 12

    (17) declaration -> type . LBRACKET expression RBRACKET ID
    (18) declaration -> type . declaration_list
    (19) declaration_list -> . declaration_item COMMA declaration_list
    (20) declaration_list -> . declaration_item
    (21) declaration_item -> . ID
    (22) declaration_item -> . ID ASSIGN expression

    LBRACKET        shift and go to state 45
    ID              shift and go to state 46

    declaration_list               shift and go to state 47
    declaration_item               shift and go to state 48

state 13

    (67) assignable -> ID .
    (60) primary -> ID .
    (86) func_call -> ID . LPAREN arg_list RPAREN

    ASSIGN          reduce using rule 67 (assignable -> ID .)
    PLUS            reduce using rule 60 (primary -> ID .)
    MINUS           reduce using rule 60 (primary -> ID .)
    MULT            reduce using rule 60 (primary -> ID .)
    DIV             reduce using rule 60 (primary -> ID .)
    EQ              reduce using rule 60 (primary -> ID .)
    NEQ             reduce using rule 60 (primary -> ID .)
    GT              reduce using rule 60 (primary -> ID .)
    GTE             reduce using rule 60 (primary -> ID .)
    LT              reduce using rule 60 (primary -> ID .)
    LTE             reduce using rule 60 (primary -> ID .)
    AND             reduce using rule 60 (primary -> ID .)
    OR              reduce using rule 60 (primary -> ID .)
    LBRACKET        reduce using rule 60 (primary -> ID .)
    DOT             reduce using rule 60 (primary -> ID .)
    NEWLINE         reduce using rule 60 (primary -> ID .)
    LPAREN          shift and go to state 49


state 14

    (66) primary -> LPAREN . expression RPAREN
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LT expression
    (52) expression -> . expression LTE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . expression LBRACKET expression RBRACKET
    (58) expression -> . expression DOT ID
    (59) expression -> . primary
    (60) primary -> . ID
    (61) primary -> . NUMBER
    (62) primary -> . TRUE
    (63) primary -> . FALSE
    (64) primary -> . CHAR_LITERAL
    (65) primary -> . func_call
    (66) primary -> . LPAREN expression RPAREN
    (86) func_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 28
    MINUS           shift and go to state 27
    ID              shift and go to state 51
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    LPAREN          shift and go to state 14

    expression                     shift and go to state 50
    primary                        shift and go to state 29
    func_call                      shift and go to state 35

state 15

    (34) type_def -> TYPE . TYPENAME COLON type_block
    (35) type_def -> TYPE . ID COLON type_block

    TYPENAME        shift and go to state 52
    ID              shift and go to state 53


state 16

    (27) declaration -> TYPENAME . ID
    (29) type -> TYPENAME .

    LBRACKET        reduce using rule 29 (type -> TYPENAME .)
    ID              reduce using rule 29 (type -> TYPENAME .)

  ! ID              [ shift and go to state 54 ]


state 17

    (12) statement -> declaration .

    NEWLINE         reduce using rule 12 (statement -> declaration .)


state 18

    (13) statement -> if_statement .

    NEWLINE         reduce using rule 13 (statement -> if_statement .)


state 19

    (14) statement -> while_statement .

    NEWLINE         reduce using rule 14 (statement -> while_statement .)


state 20

    (15) statement -> return_statement .

    NEWLINE         reduce using rule 15 (statement -> return_statement .)


state 21

    (16) statement -> expression .
    (43) expression -> expression . PLUS expression
    (44) expression -> expression . MINUS expression
    (45) expression -> expression . MULT expression
    (46) expression -> expression . DIV expression
    (47) expression -> expression . EQ expression
    (48) expression -> expression . NEQ expression
    (49) expression -> expression . GT expression
    (50) expression -> expression . GTE expression
    (51) expression -> expression . LT expression
    (52) expression -> expression . LTE expression
    (53) expression -> expression . AND expression
    (54) expression -> expression . OR expression
    (57) expression -> expression . LBRACKET expression RBRACKET
    (58) expression -> expression . DOT ID
    (68) assignable -> expression . DOT ID
    (69) assignable -> expression . LBRACKET expression RBRACKET

    NEWLINE         reduce using rule 16 (statement -> expression .)
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    MULT            shift and go to state 57
    DIV             shift and go to state 58
    EQ              shift and go to state 59
    NEQ             shift and go to state 60
    GT              shift and go to state 61
    GTE             shift and go to state 62
    LT              shift and go to state 63
    LTE             shift and go to state 64
    AND             shift and go to state 65
    OR              shift and go to state 66
    LBRACKET        shift and go to state 67
    DOT             shift and go to state 68


state 22

    (70) statement -> assignable . ASSIGN expression
    (72) assignable_chain -> assignable . ASSIGN assignable_chain
    (73) assignable_chain -> assignable .

  ! shift/reduce conflict for ASSIGN resolved as shift
    ASSIGN          shift and go to state 69

  ! ASSIGN          [ reduce using rule 73 (assignable_chain -> assignable .) ]


state 23

    (71) statement -> assignable_chain . ASSIGN expression

    ASSIGN          shift and go to state 70


state 24

    (74) if_statement -> IF . expression block
    (75) if_statement -> IF . expression block ELSE block
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LT expression
    (52) expression -> . expression LTE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . expression LBRACKET expression RBRACKET
    (58) expression -> . expression DOT ID
    (59) expression -> . primary
    (60) primary -> . ID
    (61) primary -> . NUMBER
    (62) primary -> . TRUE
    (63) primary -> . FALSE
    (64) primary -> . CHAR_LITERAL
    (65) primary -> . func_call
    (66) primary -> . LPAREN expression RPAREN
    (86) func_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 28
    MINUS           shift and go to state 27
    ID              shift and go to state 51
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    LPAREN          shift and go to state 14

    expression                     shift and go to state 71
    primary                        shift and go to state 29
    func_call                      shift and go to state 35

state 25

    (76) while_statement -> WHILE . expression block
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LT expression
    (52) expression -> . expression LTE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . expression LBRACKET expression RBRACKET
    (58) expression -> . expression DOT ID
    (59) expression -> . primary
    (60) primary -> . ID
    (61) primary -> . NUMBER
    (62) primary -> . TRUE
    (63) primary -> . FALSE
    (64) primary -> . CHAR_LITERAL
    (65) primary -> . func_call
    (66) primary -> . LPAREN expression RPAREN
    (86) func_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 28
    MINUS           shift and go to state 27
    ID              shift and go to state 51
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    LPAREN          shift and go to state 14

    expression                     shift and go to state 72
    primary                        shift and go to state 29
    func_call                      shift and go to state 35

state 26

    (85) return_statement -> RETURN . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LT expression
    (52) expression -> . expression LTE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . expression LBRACKET expression RBRACKET
    (58) expression -> . expression DOT ID
    (59) expression -> . primary
    (60) primary -> . ID
    (61) primary -> . NUMBER
    (62) primary -> . TRUE
    (63) primary -> . FALSE
    (64) primary -> . CHAR_LITERAL
    (65) primary -> . func_call
    (66) primary -> . LPAREN expression RPAREN
    (86) func_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 28
    MINUS           shift and go to state 27
    ID              shift and go to state 51
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    LPAREN          shift and go to state 14

    expression                     shift and go to state 73
    primary                        shift and go to state 29
    func_call                      shift and go to state 35

state 27

    (56) expression -> MINUS . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LT expression
    (52) expression -> . expression LTE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . expression LBRACKET expression RBRACKET
    (58) expression -> . expression DOT ID
    (59) expression -> . primary
    (60) primary -> . ID
    (61) primary -> . NUMBER
    (62) primary -> . TRUE
    (63) primary -> . FALSE
    (64) primary -> . CHAR_LITERAL
    (65) primary -> . func_call
    (66) primary -> . LPAREN expression RPAREN
    (86) func_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 28
    MINUS           shift and go to state 27
    ID              shift and go to state 51
    NUMBER          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    LPAREN          shift and go to state 14

    expression                     shift and go to state 74
    primary                        shift and go to state 29
    func_call                      shift and go to state 35

state 28

    (55) expression -> NOT . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULT expression
    (46) expression -> . expression DIV expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression GT expression
